--- a/4.8/2.html
+++ b/4.8/2.html
@@ -26,6 +26,7 @@
                 }
             };
             obj.getName();
+            // 函数只能保存在堆内存中，通过栈内存的指针前往调用。栈内存的指针保存在哪里？变量里。变量保存在哪里？执行上下文的作用域链中。
         }, false);
     </script>
 </body>
