--- a/4.23/canvas/drawARectangle.html
+++ b/4.23/canvas/drawARectangle.html
@@ -14,18 +14,18 @@
     <script>
         let cvs = document.getElementById('cvs');
         if (cvs.getContext) {
-            let ctx = cvs.getContext('2d');
-            ctx.strokeStyle = 'red';
-            ctx.lineWidth = 20;
+            // let ctx = cvs.getContext('2d');
+            // ctx.strokeStyle = 'red';
+            // ctx.lineWidth = 20;
             // ctx.lineCap = "round";
-            ctx.lineJoin = "round";
-            ctx.strokeRect(50, 50, 100, 100);
+            // ctx.lineJoin = "round";
+            // ctx.strokeRect(50, 50, 100, 100);
 
             // ctx.fillStyle = "blue";
             // ctx.fillRect(50, 50, 100, 100);
-            ctx.clearRect(50, 50, 50, 80);
+            // ctx.clearRect(50, 50, 50, 80);
 
-            ctx.rect(50, 50, 100, 100);
+            // ctx.rect(50, 50, 100, 100);
         }
     </script>
 </body>
