--- a/4.23/canvas/aClock.html
+++ b/4.23/canvas/aClock.html
@@ -34,7 +34,7 @@
             if (time.h >= 12) {
                 time.h -= 12;
             }
-            let hDeg = (time.h * Math.PI / 6) + (time.m / 60 * Math.PI / 360) + (time.s / 60 * Math.PI / 21600);
+            let hDeg = (time.h * Math.PI / 6) + (time.m * Math.PI / 360) + (time.s / 60 * Math.PI / 360);
             let h_x = 50 * Math.sin(hDeg);
             let h_y = -50 * Math.cos(hDeg);
             let mDeg = (time.m / 30 * Math.PI) + (time.s / 60 * Math.PI / 30);
